v10/docs/ModelsCertificateRetrievalResponseCRLDistributionPointModel.md
# ModelsCertificateRetrievalResponseCRLDistributionPointModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int64** |  | [optional] 
**Url** | Pointer to **string** |  | [optional] 
**UrlHash** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseCRLDistributionPointModel

`func NewModelsCertificateRetrievalResponseCRLDistributionPointModel() *ModelsCertificateRetrievalResponseCRLDistributionPointModel`

NewModelsCertificateRetrievalResponseCRLDistributionPointModel instantiates a new ModelsCertificateRetrievalResponseCRLDistributionPointModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseCRLDistributionPointModelWithDefaults

`func NewModelsCertificateRetrievalResponseCRLDistributionPointModelWithDefaults() *ModelsCertificateRetrievalResponseCRLDistributionPointModel`

NewModelsCertificateRetrievalResponseCRLDistributionPointModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseCRLDistributionPointModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) GetId() int64`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) GetIdOk() (*int64, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) SetId(v int64)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) HasId() bool`

HasId returns a boolean if a field has been set.

### GetUrl

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) GetUrl() string`

GetUrl returns the Url field if non-nil, zero value otherwise.

### GetUrlOk

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) GetUrlOk() (*string, bool)`

GetUrlOk returns a tuple with the Url field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUrl

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) SetUrl(v string)`

SetUrl sets Url field to given value.

### HasUrl

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) HasUrl() bool`

HasUrl returns a boolean if a field has been set.

### GetUrlHash

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) GetUrlHash() string`

GetUrlHash returns the UrlHash field if non-nil, zero value otherwise.

### GetUrlHashOk

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) GetUrlHashOk() (*string, bool)`

GetUrlHashOk returns a tuple with the UrlHash field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUrlHash

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) SetUrlHash(v string)`

SetUrlHash sets UrlHash field to given value.

### HasUrlHash

`func (o *ModelsCertificateRetrievalResponseCRLDistributionPointModel) HasUrlHash() bool`

HasUrlHash returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


